# neural-data-simulator

./: .buildinfo  .flake8  .gitignore  Makefile  README.md  SECURITY.md  architecture.html  configuring.html  contributing.html  decoders.html  encoder.html  ephys_generator.html  extending.html  genindex.html  index.html  inputs.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  pyrightconfig.json  running.html  running_bci.html  search.html  searchindex.js  tasks.html  utilities.html  visualization.html
.circleci/: config.yml
.github/: allowed_word_list.txt  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: check_labels.yml  lint.yml  publish_release.yml  sphinx_build.yml  test.yml
_downloads/04606d167bb9682bf0dc241cf8654c22/: plot_train_encoder_and_decoder_model.py
_downloads/07b0cb003c4543c4bb868484cce59eb0/: plot_decoded_behavior.ipynb
_downloads/169f42520b2884c769de571bbd00bb63/: plot_train_encoder_and_decoder_model.ipynb
_downloads/211f8666d0c75b885eb4566ecab28e2b/: plot_behavior_and_spikes.py
_downloads/23129c283f89f9e73bc7010ce72c79a3/: plot_psd.ipynb
_downloads/23c0a3920b74ee5a370c372cfcb2faed/: plot_run_open_loop.py
_downloads/4489587ad75cc7848325a47590c946e0/: plot_decoded_behavior.py
_downloads/55dd6ece7e7ba4f2a2cdab591fd6ee9f/: plot_isi.ipynb
_downloads/56e0b23d46c44d234973221b165681c2/: plot_isi.py
_downloads/829ec06b096c29056349cd65258e06a7/: plot_predicted_spike_rates.ipynb
_downloads/82ca7b937225ac48a56d210ece319d5c/: plot_run_open_loop.ipynb
_downloads/ae4923405b4213fcd2399cb77a096a83/: plot_predicted_spike_rates.py
_downloads/d3c9a94a3bc20820e4c52fab94cb4cba/: plot_psd.py
_downloads/d69265ad99de3471ba19e29b29bc351b/: plot_behavior_and_spikes.ipynb
_downloads/eb7a61fc0ae9166f7f4fd193ce0a51b5/: plot_behavior_distribution.ipynb
_modules/: index.html
_modules/decoder/: decoders.html  run_decoder.html  settings.html
_modules/nds/: encoder.html  ephys_generator.html  filters.html  health_checker.html  inputs.html  models.html  outputs.html  runner.html  samples.html  streamers.html  timing.html
_modules/neural_data_simulator/: encoder.html  ephys_generator.html  filters.html  health_checker.html  inputs.html  models.html  outputs.html  runner.html  samples.html  streamers.html  timing.html
_modules/recorder/: recorders.html  run_recorder.html
_modules/streamer/: run_streamer.html  settings.html  streamers.html
_modules/tasks/: run_center_out_reach.html  run_closed_loop.html
_sources/: architecture.md.txt  contributing.md.txt  encoder.md.txt  extending.md.txt  installation.md.txt  running.md.txt  utilities.md.txt
_sources/auto_examples/: index.rst.txt  plot_behavior_and_spikes.rst.txt  plot_behavior_distribution.rst.txt  plot_decoded_behavior.rst.txt  plot_isi.rst.txt  plot_predicted_spike_rates.rst.txt  plot_psd.rst.txt  plot_run_open_loop.rst.txt  plot_train_encoder_and_decoder_model.rst.txt  sg_execution_times.rst.txt
_sources/nds/: modules.rst.txt  nds.rst.txt  nds.scripts.rst.txt
_sources/neural_data_simulator/: modules.rst.txt  neural_data_simulator.core.inputs.rst.txt  neural_data_simulator.core.rst.txt  neural_data_simulator.decoder.rst.txt  neural_data_simulator.plugins.rst.txt  neural_data_simulator.recorder.rst.txt  neural_data_simulator.rst.txt  neural_data_simulator.scripts.rst.txt  neural_data_simulator.streamer.rst.txt  neural_data_simulator.tasks.center_out_reach.rst.txt  neural_data_simulator.tasks.rst.txt
_sources/tools/: decoder.rst.txt  modules.rst.txt  recorder.rst.txt  streamer.rst.txt  tasks.center_out_reach.rst.txt  tasks.rst.txt
auto_examples/: index.html  plot_behavior_and_spikes.html  plot_behavior_distribution.html  plot_decoded_behavior.html  plot_isi.html  plot_predicted_spike_rates.html  plot_psd.html  plot_run_open_loop.html  plot_train_encoder_and_decoder_model.html  sg_execution_times.html
docs/: contributing.md  requirements.txt
docs/source/: conf.py  configuring.md  decoders.md  encoder.md  ephys_generator.md  index.md  inputs.md  installation.md  running_bci.md  tasks.md  utilities.md  visualization.md
docs/templates/: package.rst_t  toc.rst_t
examples/: plot_behavior_distribution.py  plot_decoded_behavior.py  plot_generate_noise_file.py  plot_isi.py  plot_predicted_spike_rates.py  plot_psd.py  plot_run_open_loop.py  plot_train_encoder_and_decoder_model.py
nds/: modules.html  nds.html  nds.scripts.html
neural_data_simulator/: __init__.py  encoder.py  ephys_generator.py  modules.html  neural_data_simulator.core.html  neural_data_simulator.core.inputs.html  neural_data_simulator.decoder.html  neural_data_simulator.html  neural_data_simulator.plugins.html  neural_data_simulator.recorder.html  neural_data_simulator.scripts.html  neural_data_simulator.streamer.html  neural_data_simulator.tasks.center_out_reach.html  neural_data_simulator.tasks.html
neural_data_simulator/config/: lsl.config
neural_data_simulator/core/: filters.py  models.py  settings.py
neural_data_simulator/decoder/: decoders.py  settings.py
neural_data_simulator/recorder/: run_recorder.py
neural_data_simulator/scripts/: run_ephys_generator.py
neural_data_simulator/util/: circular_dequeue.py
src/affect_simulator/: model.py  read_xdf.py  settings.py
src/decoder/: __init__.py  decoders.py  run_decoder.py  settings.py
src/nds/: __init__.py  encoder.py  ephys_generator.py  filters.py  health_checker.py  inputs.py  models.py  outputs.py  runner.py  samples.py  streamers.py  timing.py
src/neural_data_simulator/: __init__.py  encoder.py  ephys_generator.py  errors.py  inputs.py  noise.py  outputs.py  settings.py  spike_rate_inputs.py  streamers.py  timing.py
src/plugins/: __init__.py
tests/: __init__.py  test_buffer.py  test_encoder.py  test_ephys_generator.py  test_inputs.py  test_outputs.py  test_runner.py  test_samples.py  test_settings_loader.py  test_streamers.py  test_timing.py
tools/: decoder.html  modules.html  recorder.html  streamer.html  tasks.center_out_reach.html  tasks.html
(+163 files in other folders)
